# 42_philosophers_tester

./: CMakeLists.txt  LICENSE  README.md  check_valgrind.py  timeout_validator.py
